--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,7 +17,37 @@ spec:
     spec:
       containers:
         - name: goserver
-          image: "marlonraphael/hello-go:v5.3"
+          image: "marlonraphael/hello-go:v5.5"
+
+          startupProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            periodSeconds: 3
+            failureThreshold: 1
+            initialDelaySeconds: 10
+          #            timeoutSeconds: 1
+          #            successThreshold: 1
+
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            periodSeconds: 3
+            failureThreshold: 1
+            initialDelaySeconds: 10
+#            timeoutSeconds: 1
+#            successThreshold: 1
+
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            periodSeconds: 5
+            failureThreshold: 1
+            timeoutSeconds: 1
+            successThreshold: 1
+            initialDelaySeconds: 15
           envFrom:
             - configMapRef:
                 name: goserver-env
